--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@typescript-eslint/parser": "^3.7.1",
     "bignumber.js": "^9.0.1",
     "cypress": "^9.2.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.5.0",
     "eslint-config-next": "^11.0.1",
@@ -100,5 +101,8 @@
     "start-server-and-test": "^1.14.0",
     "typescript": "^4.3.4",
     "wait-for-expect": "^3.0.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
